tests/lexer/valid/test_numbers.src
0 123 -456 3.14 -2.718 0.0