tests/lexer/invalid/test_malformed_number.src
123.
.456
12.34.56
9999999999
-9999999999